# vault-engine

./: .gitignore  LICENSE  NOTICE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
eval/: README.md  run_eval.py
eval/adapters/: presidio_adapter.py
eval/dataset/: docs.jsonl
eval/results/: latest.md
examples/: demo.py  roundtrip.sh
scripts/: record-demo.sh
tests/: fakes.py  test_cli.py  test_clip.py  test_detectors.py  test_formats.py  test_mapping.py  test_pipeline.py  test_providers.py  test_roundtrip.py
tests/fixtures/: sample_markdown.md
vaultengine/: __init__.py  __main__.py  cli.py  clipboard.py  config.py  detectors.py  formats.py  mapping.py  pipeline.py  prompts.py  report.py  spans.py
vaultengine/providers/: __init__.py  base.py  null.py  ollama.py  openai_compat.py
